// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clicking leave group opens dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  >
    <div
      class="makeStyles-container-193"
    >
      <div>
        <div
          class="MuiBox-root MuiBox-root-198"
        >
          <h5
            class="MuiTypography-root makeStyles-text-196 MuiTypography-h5 MuiTypography-gutterBottom"
          >
            <span>
              fake group name
            </span>
          </h5>
          <p
            class="MuiTypography-root makeStyles-text-196 makeStyles-description-197 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
          >
            <span>
              fake group description
            </span>
          </p>
        </div>
      </div>
      <div
        class="makeStyles-tabsDesktop-194"
        style="height: 400px;"
      >
        <div
          class="MuiPaper-root makeStyles-container-201 MuiPaper-outlined makeStyles-paperOutlined-199 MuiPaper-rounded"
        >
          <div
            class="MuiTabs-root"
          >
            <div
              class="MuiTabs-scroller MuiTabs-fixed"
              style="overflow: hidden;"
            >
              <div
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="group-tabpanel-members"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
                  id="group-tab-members"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.members.title
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="group-tabpanel-cars"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-disabled MuiTab-fullWidth Mui-disabled"
                  disabled=""
                  id="group-tab-cars"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.cars.title
                  </span>
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-202 PrivateTabIndicator-colorSecondary-204 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
          <div
            class="makeStyles-tabContent-200"
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="height: 100%; flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; transform: translate(0%, 0);"
            >
              <div
                aria-hidden="false"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-members"
                  class="makeStyles-tabContent-200"
                  id="group-tabpanel-members"
                  role="tabpanel"
                >
                  <ul
                    class="MuiList-root MuiList-padding"
                  >
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemAvatar-root"
                      >
                        <div
                          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-215"
                        >
                          <img
                            alt="user-13"
                            class="MuiAvatar-img"
                            src="/api/user/13/profile-pic"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          misc.you
                        </p>
                        <span />
                      </div>
                    </li>
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemAvatar-root"
                      >
                        <div
                          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-217"
                        >
                          <img
                            alt="user-2"
                            class="MuiAvatar-img"
                            src="/api/user/2/profile-pic"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          TEST
                        </p>
                        <span>
                          <div
                            class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-210"
                            style="margin-right: 4px;"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.owner
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-210"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.admin
                            </span>
                          </div>
                        </span>
                      </div>
                    </li>
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemAvatar-root"
                      >
                        <div
                          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-219"
                        >
                          <img
                            alt="user-12"
                            class="MuiAvatar-img"
                            src="/api/user/12/profile-pic"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          ADMIN
                        </p>
                        <span>
                          <div
                            class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-210"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.admin
                            </span>
                          </div>
                        </span>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                aria-hidden="true"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-cars"
                  hidden=""
                  id="group-tabpanel-cars"
                  role="tabpanel"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-footer-195"
      >
        <div
          class="MuiBox-root MuiBox-root-213"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-214 MuiButton-fullWidth"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              modals.group.manage.leaveGroup.button
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiDialog-root"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiPaper-elevation24 MuiPaper-rounded"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-h6"
          >
            modals.group.manage.leaveGroup.dialog.title
          </h2>
        </div>
        <div
          class="MuiDialogContent-root"
        >
          <p
            class="MuiTypography-root MuiDialogContentText-root MuiTypography-body1 MuiTypography-colorTextSecondary"
          >
            modals.group.manage.leaveGroup.dialog.content
          </p>
        </div>
        <div
          class="MuiDialogActions-root MuiDialogActions-spacing"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              misc.no
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <div
            class="MuiBox-root MuiBox-root-223 makeStyles-wrapper-221"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                misc.yes
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`get groupId from route params if not provided as property 1`] = `
<body>
  <div>
    <div
      class="makeStyles-container-135"
    >
      <div>
        <div
          class="MuiBox-root MuiBox-root-140"
        >
          <h5
            class="MuiTypography-root makeStyles-text-138 MuiTypography-h5 MuiTypography-gutterBottom"
          >
            <span>
              fake group name
            </span>
          </h5>
          <p
            class="MuiTypography-root makeStyles-text-138 makeStyles-description-139 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
          >
            <span>
              fake group description
            </span>
          </p>
        </div>
      </div>
      <div
        class="makeStyles-tabsDesktop-136"
        style="height: 400px;"
      >
        <div
          class="MuiPaper-root makeStyles-container-143 MuiPaper-outlined makeStyles-paperOutlined-141 MuiPaper-rounded"
        >
          <div
            class="MuiTabs-root"
          >
            <div
              class="MuiTabs-scroller MuiTabs-fixed"
              style="overflow: hidden;"
            >
              <div
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="group-tabpanel-members"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
                  id="group-tab-members"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.members.title
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="group-tabpanel-cars"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-disabled MuiTab-fullWidth Mui-disabled"
                  disabled=""
                  id="group-tab-cars"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.cars.title
                  </span>
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-144 PrivateTabIndicator-colorSecondary-146 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
          <div
            class="makeStyles-tabContent-142"
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="height: 100%; flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; transform: translate(0%, 0);"
            >
              <div
                aria-hidden="false"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-members"
                  class="makeStyles-tabContent-142"
                  id="group-tabpanel-members"
                  role="tabpanel"
                >
                  <ul
                    class="MuiList-root MuiList-padding"
                  >
                    <li
                      class="MuiListItem-root MuiListItem-gutters"
                    >
                      <div
                        class="MuiListItemAvatar-root"
                      >
                        <div
                          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-153"
                        >
                          <img
                            alt="user-2"
                            class="MuiAvatar-img"
                            src="/api/user/2/profile-pic"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          TEST
                        </p>
                        <span>
                          <div
                            class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-150"
                            style="margin-right: 4px;"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.owner
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-150"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.admin
                            </span>
                          </div>
                        </span>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                aria-hidden="true"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-cars"
                  hidden=""
                  id="group-tabpanel-cars"
                  role="tabpanel"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-footer-137"
      >
        <div
          class="MuiBox-root MuiBox-root-151"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-152 MuiButton-fullWidth"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              modals.group.manage.leaveGroup.button
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`leave group button is visible if user is not owner of group 1`] = `
<body>
  <div>
    <div
      class="makeStyles-container-160"
    >
      <div>
        <div
          class="MuiBox-root MuiBox-root-165"
        >
          <h5
            class="MuiTypography-root makeStyles-text-163 MuiTypography-h5 MuiTypography-gutterBottom"
          >
            <span>
              fake group name
            </span>
          </h5>
          <p
            class="MuiTypography-root makeStyles-text-163 makeStyles-description-164 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
          >
            <span>
              fake group description
            </span>
          </p>
        </div>
      </div>
      <div
        class="makeStyles-tabsDesktop-161"
        style="height: 400px;"
      >
        <div
          class="MuiPaper-root makeStyles-container-168 MuiPaper-outlined makeStyles-paperOutlined-166 MuiPaper-rounded"
        >
          <div
            class="MuiTabs-root"
          >
            <div
              class="MuiTabs-scroller MuiTabs-fixed"
              style="overflow: hidden;"
            >
              <div
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="group-tabpanel-members"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
                  id="group-tab-members"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.members.title
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="group-tabpanel-cars"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-disabled MuiTab-fullWidth Mui-disabled"
                  disabled=""
                  id="group-tab-cars"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.cars.title
                  </span>
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-169 PrivateTabIndicator-colorSecondary-171 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
          <div
            class="makeStyles-tabContent-167"
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="height: 100%; flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; transform: translate(0%, 0);"
            >
              <div
                aria-hidden="false"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-members"
                  class="makeStyles-tabContent-167"
                  id="group-tabpanel-members"
                  role="tabpanel"
                >
                  <ul
                    class="MuiList-root MuiList-padding"
                  >
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemAvatar-root"
                      >
                        <div
                          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-182"
                        >
                          <img
                            alt="user-13"
                            class="MuiAvatar-img"
                            src="/api/user/13/profile-pic"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          misc.you
                        </p>
                        <span />
                      </div>
                    </li>
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemAvatar-root"
                      >
                        <div
                          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-184"
                        >
                          <img
                            alt="user-2"
                            class="MuiAvatar-img"
                            src="/api/user/2/profile-pic"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          TEST
                        </p>
                        <span>
                          <div
                            class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-177"
                            style="margin-right: 4px;"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.owner
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-177"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.admin
                            </span>
                          </div>
                        </span>
                      </div>
                    </li>
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemAvatar-root"
                      >
                        <div
                          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-186"
                        >
                          <img
                            alt="user-12"
                            class="MuiAvatar-img"
                            src="/api/user/12/profile-pic"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          ADMIN
                        </p>
                        <span>
                          <div
                            class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-177"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.admin
                            </span>
                          </div>
                        </span>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                aria-hidden="true"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-cars"
                  hidden=""
                  id="group-tabpanel-cars"
                  role="tabpanel"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-footer-162"
      >
        <div
          class="MuiBox-root MuiBox-root-180"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-181 MuiButton-fullWidth"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              modals.group.manage.leaveGroup.button
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders circular progress while loading group data 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root MuiBox-root-11 makeStyles-centered-9 makeStyles-container-8"
    >
      <div
        class="MuiBox-root MuiBox-root-12 makeStyles-centered-9"
      >
        <div
          class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders error message if group doesn't exist 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root MuiBox-root-18 makeStyles-centered-14"
    >
      <div
        class="MuiBox-root MuiBox-root-19 makeStyles-centered-14"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeLarge"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
        >
          modals.group.manage.loadingFailed
        </h6>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders group info if group exists 1`] = `
<body>
  <div>
    <div
      class="makeStyles-container-25"
    >
      <div>
        <div
          class="MuiBox-root MuiBox-root-30"
        >
          <h5
            class="MuiTypography-root makeStyles-text-28 MuiTypography-h5 MuiTypography-gutterBottom"
          >
            <span>
              fake group name
            </span>
          </h5>
          <p
            class="MuiTypography-root makeStyles-text-28 makeStyles-description-29 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
          >
            <span>
              fake group description
            </span>
          </p>
        </div>
      </div>
      <div
        class="makeStyles-tabsDesktop-26"
        style="height: 400px;"
      >
        <div
          class="MuiPaper-root makeStyles-container-33 MuiPaper-outlined makeStyles-paperOutlined-31 MuiPaper-rounded"
        >
          <div
            class="MuiTabs-root"
          >
            <div
              class="MuiTabs-scroller MuiTabs-fixed"
              style="overflow: hidden;"
            >
              <div
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="group-tabpanel-members"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
                  id="group-tab-members"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.members.title
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="group-tabpanel-cars"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-disabled MuiTab-fullWidth Mui-disabled"
                  disabled=""
                  id="group-tab-cars"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.cars.title
                  </span>
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-34 PrivateTabIndicator-colorSecondary-36 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
          <div
            class="makeStyles-tabContent-32"
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="height: 100%; flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; transform: translate(0%, 0);"
            >
              <div
                aria-hidden="false"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-members"
                  class="makeStyles-tabContent-32"
                  id="group-tabpanel-members"
                  role="tabpanel"
                >
                  <ul
                    class="MuiList-root MuiList-padding"
                  >
                    <li
                      class="MuiListItem-root MuiListItem-gutters"
                    >
                      <div
                        class="MuiListItemAvatar-root"
                      >
                        <div
                          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-52"
                        >
                          <img
                            alt="user-2"
                            class="MuiAvatar-img"
                            src="/api/user/2/profile-pic"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          misc.you
                        </p>
                        <span>
                          <div
                            class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-40"
                            style="margin-right: 4px;"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.owner
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-40"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.admin
                            </span>
                          </div>
                        </span>
                      </div>
                    </li>
                  </ul>
                  <div
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiFab-root makeStyles-fab-41 MuiFab-secondary"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-cars"
                  hidden=""
                  id="group-tabpanel-cars"
                  role="tabpanel"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-footer-27"
      >
        <div
          class="MuiBox-root MuiBox-root-51"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders list of invites correctly 1`] = `
<body>
  <div>
    <div
      class="makeStyles-container-101"
    >
      <div>
        <div
          class="MuiBox-root MuiBox-root-106"
        >
          <h5
            class="MuiTypography-root makeStyles-text-104 MuiTypography-h5 MuiTypography-gutterBottom"
          >
            <span>
              fake group name
            </span>
          </h5>
          <p
            class="MuiTypography-root makeStyles-text-104 makeStyles-description-105 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
          >
            <span>
              fake group description
            </span>
          </p>
        </div>
      </div>
      <div
        class="makeStyles-tabsDesktop-102"
        style="height: 400px;"
      >
        <div
          class="MuiPaper-root makeStyles-container-109 MuiPaper-outlined makeStyles-paperOutlined-107 MuiPaper-rounded"
        >
          <div
            class="MuiTabs-root"
          >
            <div
              class="MuiTabs-scroller MuiTabs-fixed"
              style="overflow: hidden;"
            >
              <div
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="group-tabpanel-members"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
                  id="group-tab-members"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.members.title
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="group-tabpanel-cars"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-disabled MuiTab-fullWidth Mui-disabled"
                  disabled=""
                  id="group-tab-cars"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.cars.title
                  </span>
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-110 PrivateTabIndicator-colorSecondary-112 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
          <div
            class="makeStyles-tabContent-108"
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="height: 100%; flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; transform: translate(0%, 0);"
            >
              <div
                aria-hidden="false"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-members"
                  class="makeStyles-tabContent-108"
                  id="group-tabpanel-members"
                  role="tabpanel"
                >
                  <ul
                    class="MuiList-root MuiList-padding"
                  >
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemAvatar-root"
                      >
                        <div
                          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-128"
                        >
                          <img
                            alt="user-2"
                            class="MuiAvatar-img"
                            src="/api/user/2/profile-pic"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          misc.you
                        </p>
                        <span>
                          <div
                            class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-116"
                            style="margin-right: 4px;"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.owner
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-116"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.admin
                            </span>
                          </div>
                        </span>
                      </div>
                    </li>
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemText-root MuiListItemText-inset MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
                        >
                          ADMIN_1
                        </p>
                        <p
                          class="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                        >
                          misc.invitedBy
                        </p>
                      </div>
                    </li>
                    <li
                      class="MuiListItem-root MuiListItem-gutters"
                    >
                      <div
                        class="MuiListItemText-root MuiListItemText-inset MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary"
                        >
                          ADMIN_2
                        </p>
                        <p
                          class="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                        >
                          misc.invitedBy
                        </p>
                      </div>
                    </li>
                  </ul>
                  <div
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiFab-root makeStyles-fab-117 MuiFab-secondary"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-cars"
                  hidden=""
                  id="group-tabpanel-cars"
                  role="tabpanel"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-footer-103"
      >
        <div
          class="MuiBox-root MuiBox-root-127"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders list of members correctly 1`] = `
<body>
  <div>
    <div
      class="makeStyles-container-59"
    >
      <div>
        <div
          class="MuiBox-root MuiBox-root-64"
        >
          <h5
            class="MuiTypography-root makeStyles-text-62 MuiTypography-h5 MuiTypography-gutterBottom"
          >
            <span>
              fake group name
            </span>
          </h5>
          <p
            class="MuiTypography-root makeStyles-text-62 makeStyles-description-63 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
          >
            <span>
              fake group description
            </span>
          </p>
        </div>
      </div>
      <div
        class="makeStyles-tabsDesktop-60"
        style="height: 400px;"
      >
        <div
          class="MuiPaper-root makeStyles-container-67 MuiPaper-outlined makeStyles-paperOutlined-65 MuiPaper-rounded"
        >
          <div
            class="MuiTabs-root"
          >
            <div
              class="MuiTabs-scroller MuiTabs-fixed"
              style="overflow: hidden;"
            >
              <div
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="group-tabpanel-members"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
                  id="group-tab-members"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.members.title
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="group-tabpanel-cars"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-disabled MuiTab-fullWidth Mui-disabled"
                  disabled=""
                  id="group-tab-cars"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.cars.title
                  </span>
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-68 PrivateTabIndicator-colorSecondary-70 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
          <div
            class="makeStyles-tabContent-66"
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="height: 100%; flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; transform: translate(0%, 0);"
            >
              <div
                aria-hidden="false"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-members"
                  class="makeStyles-tabContent-66"
                  id="group-tabpanel-members"
                  role="tabpanel"
                >
                  <ul
                    class="MuiList-root MuiList-padding"
                  >
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemAvatar-root"
                      >
                        <div
                          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-90"
                        >
                          <img
                            alt="user-2"
                            class="MuiAvatar-img"
                            src="/api/user/2/profile-pic"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          misc.you
                        </p>
                        <span>
                          <div
                            class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-74"
                            style="margin-right: 4px;"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.owner
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-74"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.admin
                            </span>
                          </div>
                        </span>
                      </div>
                    </li>
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemAvatar-root"
                      >
                        <div
                          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-92"
                        >
                          <img
                            alt="user-12"
                            class="MuiAvatar-img"
                            src="/api/user/12/profile-pic"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          ADMIN
                        </p>
                        <span>
                          <div
                            class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-74"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.admin
                            </span>
                          </div>
                        </span>
                      </div>
                    </li>
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemAvatar-root"
                      >
                        <div
                          class="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-94"
                        >
                          <img
                            alt="user-13"
                            class="MuiAvatar-img"
                            src="/api/user/13/profile-pic"
                          />
                        </div>
                      </div>
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          MEMBER
                        </p>
                        <span />
                      </div>
                    </li>
                  </ul>
                  <div
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiFab-root makeStyles-fab-79 MuiFab-secondary"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="MuiFab-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-hidden="true"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-cars"
                  hidden=""
                  id="group-tabpanel-cars"
                  role="tabpanel"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-footer-61"
      >
        <div
          class="MuiBox-root MuiBox-root-89"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</body>
`;
